# ckanext-sofia

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/sofia/: cli.py  helpers.py  plugin.py  views.py
ckanext/sofia/assets/: script.js  webassets.yml
ckanext/sofia/logic/: action.py  auth.py  schema.py  validators.py
ckanext/sofia/public/base/css/: sofia.css
ckanext/sofia/templates/: base.html  footer.html  header.html
ckanext/sofia/templates/home/: index.html
ckanext/sofia/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/sofia/tests/logic/: test_action.py  test_auth.py  test_validators.py
