[project]
name = "ckanext-sofia"
version = "0.0.1"
description = "Theme for CKAN Sofia urban data portal"
readme = "README.md"
authors = [
    {name = "Bobby Marinov", email = "marinovboris@protonmail.com"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/abuseofnotation/ckanext-sofia"

[project.entry-points."ckan.plugins"]
sofia = "ckanext.sofia.plugin:SofiaPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
